# sequence-formats

./: Changelog.md  README.md  rarecoal-formats.cabal  sequence-formats.cabal  stack.yaml
src/: Utils.hs
src-tests/: tests.hs
src-tests/SequenceFormats/Eigenstrat/: Test.hs
src-tests/SequenceFormats/FreqSum/: Test.hs
src-tests/SequenceFormats/Pileup/: Test.hs
src-tests/SequenceFormats/RareAlleleHistogram/: Test.hs
src-tests/SequenceFormats/Utils/: Test.hs
src/Rarecoal/Formats/: FreqSum.hs  RareAlleleHistogram.hs
src/SequenceFormats/: Bed.hs  Eigenstrat.hs  Fasta.hs  FreqSum.hs  Genomic.hs  Pileup.hs  Plink.hs  RareAlleleHistogram.hs  Utils.hs  VCF.hs
src/SequenceFormats/Eigenstrat/: Test.hs
src/SequenceFormats/Fasta/: Test.hs
src/SequenceFormats/Formats/: FreqSum.hs  RareAlleleHistogram.hs
src/SequenceFormats/FreqSum/: Test.hs
src/SequenceFormats/RareAlleleHistogram/: Test.hs
src/SequenceFormats/VCF/: Test.hs
test/SequenceFormats/: BedSpec.hs  EigenstratSpec.hs  FastaSpec.hs  FreqSumSpec.hs  PileupSpec.hs  PlinkSpec.hs  RareAlleleHistogramSpec.hs  UtilsSpec.hs  VCFSpec.hs
testDat/: example.bed  example.eigenstratgeno  example.fam  example.fasta  example.freqsum  example.histogram.txt  example.pileup  example.vcf  example_out.vcf
