name:                sequence-formats
version:             1.1.4.1
synopsis:            A package with basic parsing utilities for several Bioinformatic data formats.
description:         Contains utilities to parse and write Eigenstrat, Fasta, FreqSum, VCF and other file formats used in population genetics analyses.
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, Changelog.md

library
  exposed-modules:     SequenceFormats.RareAlleleHistogram,
                       SequenceFormats.FreqSum,
                       SequenceFormats.Fasta,
                       SequenceFormats.VCF,
                       SequenceFormats.Eigenstrat,
                       SequenceFormats.Utils
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, containers, errors, text, attoparsec, pipes,
                       pipes-text, transformers, turtle, bytestring, lens-family,
                       pipes-bytestring, foldl, exceptions, pipes-safe,
                       pipes-attoparsec, vector, data-memocombinators, split, MissingH, hslogger
  default-language:    Haskell2010

