name:                sequence-formats
version:             1.3.0
synopsis:            A package with basic parsing utilities for several Bioinformatic data formats.
description:         Contains utilities to parse and write Eigenstrat, Fasta, FreqSum, VCF and other file formats used in population genetics analyses.
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, Changelog.md

library
  exposed-modules:     SequenceFormats.RareAlleleHistogram,
                       SequenceFormats.RareAlleleHistogram.Test,
                       SequenceFormats.FreqSum,
                       SequenceFormats.FreqSum.Test,
                       SequenceFormats.Fasta,
                       SequenceFormats.Fasta.Test,
                       SequenceFormats.VCF,
                       SequenceFormats.VCF.Test,
                       SequenceFormats.Eigenstrat,
                       SequenceFormats.Eigenstrat.Test,
                       SequenceFormats.Utils,
                       SequenceFormats.Utils.Test
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, containers, errors, attoparsec, pipes,
                       transformers, bytestring, lens-family,
                       pipes-bytestring, foldl, exceptions, pipes-safe,
                       pipes-attoparsec, vector, tasty-hunit
  default-language:    Haskell2010

Test-Suite sequenceFormatTests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      src-tests
  build-depends:       base, sequence-formats, foldl, pipes, pipes-safe, tasty, vector,
                       transformers, turtle, tasty-hunit
  default-language:    Haskell2010
