name:                sequence-formats
version:             1.3.2.1
synopsis:            A package with basic parsing utilities for several Bioinformatic data formats.
description:         Contains utilities to parse and write Eigenstrat, Fasta, FreqSum, VCF and other file formats used in population genetics analyses.
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, Changelog.md, testDat/example.bim, testDat/example.eigenstratgeno, testDat/example.fasta,
                     testDat/example.freqsum, testDat/example.histogram.txt, testDat/example.ind, testDat/example.snp,
                     testDat/example.vcf

library
  exposed-modules:     SequenceFormats.RareAlleleHistogram,
                       SequenceFormats.FreqSum,
                       SequenceFormats.Fasta,
                       SequenceFormats.VCF,
                       SequenceFormats.Eigenstrat,
                       SequenceFormats.Utils
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, containers, errors, attoparsec, pipes,
                       transformers, bytestring, lens-family,
                       pipes-bytestring, foldl, exceptions, pipes-safe,
                       pipes-attoparsec, vector
  default-language:    Haskell2010

Test-Suite sequenceFormatTests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      src-tests
  build-depends:       base, sequence-formats, foldl, pipes, pipes-safe, tasty, vector,
                       transformers, tasty-hunit, bytestring, containers
  other-modules:       SequenceFormats.Eigenstrat.Test,
                       SequenceFormats.Fasta.Test,
                       SequenceFormats.FreqSum.Test,
                       SequenceFormats.RareAlleleHistogram.Test,
                       SequenceFormats.Utils.Test,
                       SequenceFormats.VCF.Test
  default-language:    Haskell2010
